--- a/assets/styles/single.scss
+++ b/assets/styles/single.scss
@@ -96,6 +96,9 @@ article {
         margin-bottom: 0;
       }
     }
+    mark {
+      padding: 0.25rem 0.5rem;
+    }
     .single-post-tags {
       display: flex;
       flex-wrap: wrap;
